# httpx-integrator

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  pr-checks.yml
docs/: BEST_PRACTICES.md  getting_started.md  project_design_document.md
src/httpx_integrator/: __init__.py  client.py  config.py
tests/unit/: __init__.py  test_client.py  test_config.py  test_timeouts.py
