[project]
name = "httpx-integrator"
version = "0.1.0"
description = "A resilient HTTP client wrapper around httpx with circuit breakers, retries, and validation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest-httpserver>=1.1.3",
    "pytest~=9.0.1",
    "mypy~=1.10.0",
    "pylint~=2.15.10",
    "pytest-cov~=4.1.0",
    "pre-commit~=3.4.0",
    "ruff~=0.9.9",
    "pytest-asyncio~=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = []
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/httpx_integrator",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
